--- a/styles/main.css
+++ b/styles/main.css
@@ -94,6 +94,41 @@ button {
     color: #000000;
 }
 
+.modal {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: -1;
+    opacity: 0;
+    transition: 0.25s linear;
+}
+
+.modal--show {
+    opacity: 1;
+    pointer-events: all;
+    z-index: 13;
+}
+
+.modal__close {
+    position: absolute;
+    top: 30px;
+    right: 25px;
+    width: 44px;
+    height: 44px;
+    background: none;
+}
+
+.modal__close-icon {
+    width: 100%;
+    height: 100%;
+}
+
 @media screen and (min-width: 1440px) {
     .header {
         max-width: 1260px;
