--- a/styles/form.css
+++ b/styles/form.css
@@ -1,16 +1,18 @@
 .arrival {
-    width: 100vw;
+    width: 100%;
     /*height: 100vh;*/
     padding: 60px 0 20px;
+    overflow: hidden;
 }
 
 .arrival__content {
+    width: 100%;
     margin-bottom: 35px;
 }
 
 .arrival__content-title {
     font-family: var(--title-font);
-    color: var(--black-text);
+    color: var(--black);
     font-style: normal;
     font-weight: 500;
     font-size: 35px;
@@ -22,7 +24,7 @@
 
 .arrival__content-subtitle {
     font-family: var(--subtitle-font);
-    color: var(--black-text);
+    color: var(--black);
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -39,8 +41,8 @@
 
 .arrival__form-input {
     width: 100%;
-    background: var(--white-text);
-    border: 2px solid var(--black-text);
+    background: var(--white);
+    border: 2px solid var(--black);
     box-sizing: border-box;
     border-radius: 10px;
     padding: 14px 24px;
@@ -69,7 +71,6 @@
     width: 100%;
     max-width: 100%;
     position: relative;
-    overflow: hidden;
 }
 
 .arrival__logomark {
@@ -88,6 +89,7 @@
     padding: 0 30px;
     width: 275px;
     height: 444px;
+    margin: 0 auto;
 }
 
 .arrival__frame-phone {
@@ -103,7 +105,7 @@
     overflow: hidden;
     position: absolute;
     top: 36px;
-    bottom: 44px;
+    bottom: 48px;
     left: 112px;
     right: 56px;
     z-index: 1;
@@ -123,4 +125,146 @@
     height: 100%;
     object-fit: contain;
     object-position: bottom;
+}
+
+@media screen and (min-width: 768px) {
+    .arrival {
+        overflow: visible;
+    }
+    .arrival__inner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 700px;
+        margin: 0 auto;
+    }
+
+    .arrival__content {
+        margin: 0 60px 0 0;
+        max-width: 330px;
+    }
+
+    .arrival__content-title {
+        text-align: left;
+        padding: 0;
+    }
+
+    .arrival__content-subtitle {
+        text-align: left;
+        padding: 0;
+    }
+
+    .arrival__form {
+        padding: 0;
+    }
+
+    .arrival__frame-wrapper {
+        max-width: 300px;
+        /*overflow: auto;*/
+    }
+
+    .arrival__frame {
+        width: 300px;
+        height: 486px;
+    }
+
+    .arrival__frame-content {
+        border-radius: 16px;
+        top: 40px;
+        left: 120px;
+        right: 60px;
+        bottom: 54px;
+    }
+
+    .arrival__logomark {
+        left: -20px;
+        top: -36px;
+        width: 150px;
+    }
+}
+
+@media screen and (min-width: 1260px) {
+    .arrival {
+        padding-top: 0;
+    }
+
+    .arrival__inner {
+        max-width: 1048px;
+    }
+
+    .arrival__content {
+        max-width: 530px;
+    }
+
+    .modal .arrival__content {
+        max-width: 100%;
+    }
+
+    .arrival__form {
+        background: #FFFFFF;
+        border: 2px solid #000000;
+        box-sizing: border-box;
+        border-radius: 10px;
+        display: flex;
+        padding: 6px;
+        height: 54px;
+    }
+
+    .arrival__form-input {
+        background: none;
+        border: none;
+        margin: 0;
+        height: auto;
+        padding: 0 0 0 12px;
+    }
+
+    .arrival__form-button {
+        font-size: 15px;
+        line-height: 18px;
+        padding: 12px;
+        height: auto;
+        width: 214px !important;
+        white-space: nowrap;
+        letter-spacing: -0.01em;
+        border-radius: 5px;
+    }
+
+    .arrival__frame-wrapper {
+        max-width: 460px;
+    }
+
+    .arrival__frame {
+        margin: 0;
+        width: 460px;
+        height: 740px;
+        transform: translateY(128px) translateX(-80px);
+    }
+
+    .arrival__frame-content {
+        top: 64px;
+        left: 168px;
+        right: 72px;
+        bottom: 78px;
+        border-radius: 20px;
+    }
+
+    .arrival__content-title {
+        max-width: 430px;
+        font-size: 48px;
+        line-height: 48px;
+        margin-bottom: 30px;
+    }
+
+    .arrival__content-subtitle {
+        font-size: 20px;
+        line-height: 30px;
+        letter-spacing: -0.03em;
+        margin-bottom: 36px;
+    }
+
+    .arrival__logomark {
+        width: 230px;
+        top: 120px;
+        left: -90px;
+    }
 }
