--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,10 @@ button {
     left: 0;
     right: 0;
     z-index: 11;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid var(--black);
+    max-width: 734px;
+    margin: 0 auto;
+    padding: 10px 26px;
 }
 
 .header__btn {
@@ -44,7 +47,7 @@ button {
 
 .btn {
     background: var(--theme-color);
-    color: var(--white-text);
+    color: var(--white);
     font-family: var(--btn-font);
     border: none;
     text-align: center;
@@ -53,15 +56,13 @@ button {
     text-transform: uppercase;
 }
 
-.input {
-
-}
-
 .footer {
     display: flex;
     flex-direction: column;
-    border-top: 1px solid var(--black-text);
+    border-top: 1px solid var(--black);
     padding: 30px 0;
+    margin: 0 auto;
+    max-width: 734px;
 }
 
 .footer__socials {
@@ -91,14 +92,11 @@ button {
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
-    color: #000000;
+    color: var(--black);
 }
 
 .modal {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: var(--white);
     position: fixed;
     left: 0;
     right: 0;
@@ -106,17 +104,44 @@ button {
     top: 0;
     z-index: -1;
     opacity: 0;
-    transition: 0.25s linear;
+    display: none;
+    transition: 0.25s linear opacity;
 }
 
 .modal--show {
     opacity: 1;
     pointer-events: all;
     z-index: 13;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal__content {
+    box-sizing: border-box;
+}
+
+.modal__content-desc {
+    font-family: var(--title-font);
+    font-style: normal;
+    font-weight: 300;
+    font-size: 35px;
+    line-height: 40px;
+    text-align: center;
+    color: var(--black);
+    padding: 0 40px;
+    margin: 0;
+}
+
+.modal__content-icon {
+    height: 100px;
+    margin: 0 auto 40px;
+    display: block;
 }
 
 .modal__close {
     position: absolute;
+    z-index: 3;
     top: 30px;
     right: 25px;
     width: 44px;
@@ -129,16 +154,105 @@ button {
     height: 100%;
 }
 
-@media screen and (min-width: 1440px) {
+.modal .arrival__content {
+    margin: 0;
+}
+
+@media only screen and (min-width: 768px) {
+    .header {
+        padding: 22px 0 18px;
+    }
+
+    .header__logo {
+        height: 34px;
+    }
+
+    .header__btn {
+        padding: 13px 44px;
+        font-size: 15px;
+        line-height: 18px;
+    }
+
+    .modal {
+        background: none;
+    }
+
+    .modal__layout {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        background: rgba(106, 97, 92, 0.5);
+        /*cursor: pointer;*/
+    }
+
+    .modal__content {
+        width: 500px;
+        height: 420px;
+        padding: 0 90px;
+        background: var(--white);
+        display: flex;
+        align-items: center;
+        position: relative;
+        z-index: 3;
+    }
+
+    .modal__content-icon {
+        display: none;
+    }
+
+    .modal__content-desc {
+        text-align: left;
+        padding: 0;
+        /*font-style: normal;*/
+        /*font-weight: 300;*/
+        /*font-size: 35px;*/
+        /*line-height: 110%;*/
+    }
+
+    .footer {
+        flex-direction: row;
+        padding: 26px 0;
+    }
+
+    .footer__desc {
+        text-align: left;
+        margin: 0 auto 0 0;
+        order: -1;
+        max-width: 100%;
+    }
+
+    .footer__socials {
+        margin: 0 -15px;
+    }
+}
+
+@media screen and (min-width: 1260px) {
     .header {
         max-width: 1260px;
         margin: 0 auto;
         padding: 32px 0;
     }
+
+    .modal__content {
+        width: 720px;
+        height: 480px;
+        padding: 0 96px;
+    }
+
+    .modal__content-desc {
+        font-size: 48px;
+        line-height: 54px;
+        padding: 0 48px;
+    }
+
+    .footer {
+        max-width: 1260px;
+    }
 }
 
-@media only screen and (max-width: 768px) {
-    .header {
-        padding: 10px 26px;
-    }
+input, button {
+    outline: none;
 }
