--- a/styles/form.css
+++ b/styles/form.css
@@ -130,10 +130,10 @@
 @media screen and (min-width: 768px) {
     .arrival {
         overflow: visible;
+        padding: 0;
     }
     .arrival__inner {
         display: flex;
-        align-items: center;
         justify-content: center;
         max-width: 700px;
         margin: 0 auto;
@@ -142,6 +142,8 @@
     .arrival__content {
         margin: 0 60px 0 0;
         max-width: 330px;
+        padding-top: 70px;
+        padding-left: 20px;
     }
 
     .arrival__content-title {
@@ -194,6 +196,8 @@
 
     .arrival__content {
         max-width: 530px;
+        padding-left: 0;
+        padding-top: 112px;
     }
 
     .modal .arrival__content {
@@ -237,7 +241,7 @@
         margin: 0;
         width: 460px;
         height: 740px;
-        transform: translateY(128px) translateX(-80px);
+        transform: translateY(-80px) translateX(-33px);
     }
 
     .arrival__frame-content {
