--- a/styles/form.css
+++ b/styles/form.css
@@ -135,6 +135,7 @@
     .arrival__inner {
         display: flex;
         justify-content: center;
+        align-items: center;
         max-width: 700px;
         margin: 0 auto;
     }
@@ -142,8 +143,8 @@
     .arrival__content {
         margin: 0 60px 0 0;
         max-width: 330px;
-        padding-top: 70px;
-        padding-left: 20px;
+        /*padding-top: 70px;*/
+        /*padding-left: 20px;*/
     }
 
     .arrival__content-title {
@@ -197,7 +198,7 @@
     .arrival__content {
         max-width: 530px;
         padding-left: 0;
-        padding-top: 112px;
+        /*padding-top: 112px;*/
     }
 
     .modal .arrival__content {
