--- a/styles/form.css
+++ b/styles/form.css
@@ -71,14 +71,15 @@
     width: 100%;
     max-width: 100%;
     position: relative;
+    transform: translateX(-21px);
 }
 
 .arrival__logomark {
     position: absolute;
     right: 0;
     top: 0;
-    height: 300px;
-    width: 200px;
+    height: 303px;
+    width: 220px;
     z-index: 1;
     transform: translateX(35px);
 }
@@ -136,7 +137,7 @@
     .arrival__inner {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         max-width: 700px;
         margin: 0 auto;
     }
@@ -144,8 +145,8 @@
     .arrival__content {
         margin: 0 60px 0 0;
         max-width: 330px;
-        /*padding-top: 70px;*/
-        /*padding-left: 20px;*/
+        padding-top: 70px;
+        padding-left: 20px;
     }
 
     .arrival__content-title {
@@ -181,26 +182,28 @@
     }
 
     .arrival__logomark {
+        width: 152px;
+        height: 208px;
         left: -20px;
-        top: -36px;
-        width: 150px;
+        top: -8px;
     }
 }
 
-@media screen and (min-width: 1260px) {
+@media screen and (min-width: 1024px) {
+    .arrival__inner {
+        max-width: 1000px;
+        align-items: flex-start;
+    }
+
     .arrival {
         padding-top: 0;
         overflow: visible;
     }
 
-    .arrival__inner {
-        max-width: 1048px;
-    }
-
     .arrival__content {
         max-width: 530px;
         padding-left: 0;
-        /*padding-top: 112px;*/
+        padding-top: 103px;
     }
 
     .modal .arrival__content {
@@ -244,7 +247,7 @@
         margin: 0;
         width: 460px;
         height: 740px;
-        transform: translateY(-80px) translateX(-33px);
+        transform: translateY(-80px) translateX(-8px);
     }
 
     .arrival__frame-content {
@@ -270,8 +273,15 @@
     }
 
     .arrival__logomark {
-        width: 230px;
-        top: 120px;
-        left: -90px;
+        width: 229px;
+        height: 313px;
+        top: -71px;
+        left: -50px;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .arrival__inner {
+        max-width: 1048px;
     }
 }
