--- a/styles/main.css
+++ b/styles/main.css
@@ -220,7 +220,7 @@ button {
 
     .footer {
         flex-direction: row;
-        padding: 26px 0;
+        padding: 22px 0;
     }
 
     .footer__desc {
@@ -231,11 +231,32 @@ button {
     }
 
     .footer__socials {
-        margin: 0 -15px 0 0;
+        margin: 0 -16px 0 0;
     }
 }
 
-@media screen and (min-width: 1260px) {
+@media screen and (min-width: 1024px) {
+    .header {
+        max-width: 1260px;
+        padding: 27px 30px;
+    }
+
+    .container {
+        margin-bottom: -206px;
+        overflow: hidden;
+    }
+
+    .footer {
+        max-width: 1260px;
+        padding: 36px 30px;
+    }
+
+    .footer__socials {
+        margin: 0 -24px 0 0;
+    }
+}
+
+@media screen and (min-width: 1440px) {
     .header {
         max-width: 1260px;
         margin: 0 auto;
@@ -252,10 +273,6 @@ button {
         font-size: 48px;
         line-height: 54px;
         padding: 0 48px;
-    }
-
-    .footer {
-        max-width: 1260px;
     }
 }
 
