--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .arrival {
     width: 100%;
     /*height: 100vh;*/
@@ -43,6 +50,7 @@
     width: 100%;
     background: var(--white);
     border: 2px solid var(--black);
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     border-radius: 10px;
     padding: 14px 24px;
@@ -55,6 +63,22 @@
     height: 54px;
 }
 
+::-webkit-input-placeholder {
+    color: var(--gray-text);
+}
+
+::-moz-placeholder {
+    color: var(--gray-text);
+}
+
+:-ms-input-placeholder {
+    color: var(--gray-text);
+}
+
+::-ms-input-placeholder {
+    color: var(--gray-text);
+}
+
 ::placeholder {
     color: var(--gray-text);
 }
@@ -64,6 +88,7 @@
     border-radius: 10px;
     padding: 18px 0;
     height: 54px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -71,6 +96,8 @@
     width: 100%;
     max-width: 100%;
     position: relative;
+    -webkit-transform: translateX(-21px);
+    -ms-transform: translateX(-21px);
     transform: translateX(-21px);
 }
 
@@ -81,6 +108,8 @@
     height: 303px;
     width: 220px;
     z-index: 1;
+    -webkit-transform: translateX(35px);
+    -ms-transform: translateX(35px);
     transform: translateX(35px);
 }
 
@@ -110,8 +139,14 @@
     left: 112px;
     right: 56px;
     z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -124,7 +159,9 @@
 .arrival__frame-content img {
     width: 100%;
     height: 100%;
+    -o-object-fit: contain;
     object-fit: contain;
+    -o-object-position: bottom;
     object-position: bottom;
 }
 
@@ -135,8 +172,14 @@
         max-width: 100%;
     }
     .arrival__inner {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
         align-items: flex-start;
         max-width: 700px;
         margin: 0 auto;
@@ -192,6 +235,8 @@
 @media screen and (min-width: 1260px) {
     .arrival__inner {
         max-width: 1000px;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
         align-items: flex-start;
     }
 
@@ -215,8 +260,11 @@
     .arrival__form {
         background: #FFFFFF;
         border: 2px solid #000000;
+        -webkit-box-sizing: border-box;
         box-sizing: border-box;
         border-radius: 10px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         padding: 6px;
         height: 54px;
@@ -249,6 +297,8 @@
         margin: 0;
         width: 460px;
         height: 740px;
+        -webkit-transform: translateX(-8px);
+        -ms-transform: translateX(-8px);
         transform: translateX(-8px);
     }
 
