--- a/styles/start.css
+++ b/styles/start.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .start {
     height: 100vh;
     max-width: 100%;
@@ -7,7 +14,7 @@
     background-repeat: no-repeat;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min-resolution: 1.5dppx), only screen and (min-resolution: 144dpi) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min-resolution: 1.5dppx), only screen and (min-resolution: 144dpi) {
     .start {
         background-image: url('../assets/img/background/texture@2x.png');
     }
@@ -53,6 +60,8 @@
 
 .start__sticker-oval {
     position: absolute;
+    -webkit-transform: rotate(-16deg) translateX(56px);
+    -ms-transform: rotate(-16deg) translateX(56px);
     transform: rotate(-16deg) translateX(56px);
     bottom: 0;
     right: 0;
@@ -64,12 +73,15 @@
     top: 80px;
     left: 0;
     height: var(--sticker-height);
+    -webkit-transform: rotate(-16deg) translateX(-110px);
+    -ms-transform: rotate(-16deg) translateX(-110px);
     transform: rotate(-16deg) translateX(-110px);
 }
 
 .start__sticker-img {
     /*width: 100%;*/
     height: 100%;
+    -o-object-fit: contain;
     object-fit: contain;
 }
 
@@ -77,6 +89,8 @@
     position: absolute;
     z-index: 10;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
@@ -142,12 +156,15 @@
     height: 20px;
     padding: 20px;
     background: none;
+    -webkit-transform: translateY(80px);
+    -ms-transform: translateY(80px);
     transform: translateY(80px);
 }
 
 .start__arrow-icon {
     width: 20px;
     height: 20px;
+    -o-object-fit: contain;
     object-fit: contain;
 }
 
@@ -172,6 +189,8 @@
 
     .start__content {
         width: 100%;
+        -webkit-transform: translateY(-40%);
+        -ms-transform: translateY(-40%);
         transform: translateY(-40%);
     }
 
@@ -216,6 +235,8 @@
     }
 
     .start__arrow {
+        -webkit-transform: none;
+        -ms-transform: none;
         transform: none;
     }
 
@@ -226,6 +247,8 @@
     .start__sticker-round {
         top: auto;
         bottom: 120px;
+        -webkit-transform: rotate(-16deg) translateX(-44px);
+        -ms-transform: rotate(-16deg) translateX(-44px);
         transform: rotate(-16deg) translateX(-44px);
     }
 }
@@ -253,6 +276,8 @@
     .start__content {
         width: 100%;
         left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
     .start__title {
@@ -267,10 +292,14 @@
         height: 208px;
         bottom: 274px;
         left: 0;
+        -webkit-transform: rotate(-16deg) translateX(-150px);
+        -ms-transform: rotate(-16deg) translateX(-150px);
         transform: rotate(-16deg) translateX(-150px);
     }
     .start__sticker-oval {
         bottom: 92px;
+        -webkit-transform: rotate(-16deg) translateX(80px);
+        -ms-transform: rotate(-16deg) translateX(80px);
         transform: rotate(-16deg) translateX(80px);
     }
 }
